seo disabled & misc change

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: post-index
-title: Latest Posts
-description: "Describe this nonsense."
-tags: [Jekyll, theme, themes, responsive, blog, modern]
+title: Latest Posts by Dhawal Mehta
+description: "Hello, My name is Dhawal Mehta. I'm a UI/UX Developer & a Web/Tech Enthusiast. I transform thoughts, concepts & ideas into well thought out cross-browser compatible design specs in exchange for Green stuff. :P"
+tags: [Dhawal, Mehta, Dhawal Mehta, responsive, blog, web, User Interface, UI, UX]
 comments: false
 image:
   feature: wallpaper-1.jpg
